# django-freshdesk-sso

./: LICENSE  README.rst  pyproject.toml
django_freshdesk_sso/: apps.py  urls.py
freshdesk_sso/: views.py
tests/: test_django_freshdesk_sso.py
