[tool.poetry]
name = "django-freshdesk-sso"
version = "0.1.0"
description = "Django Freshdesk SSO enables SSO for freshdesk from your django application."
authors = ["Wout De Puysseleir <woutdp@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
