[tool.poetry]
name = "django-freshdesk-sso"
version = "0.1.1"
description = "Django Freshdesk SSO enables SSO for freshdesk from your django application."
authors = ["Wout De Puysseleir <woutdp@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/soundradix-website/django-freshdesk-sso"
repository = "https://github.com/soundradix-website/django-freshdesk-sso"
keywords = ["django", "freshdesk", "sso"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
