[tool.poetry]
name = "django-freshdesk-sso"
version = "0.2.1"
description = "Django Freshdesk SSO enables SSO for freshdesk from your django application."
authors = ["Sound Radix <soundradix@soundradix.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/soundradix-website/django-freshdesk-sso"
repository = "https://github.com/soundradix-website/django-freshdesk-sso"
keywords = ["django", "freshdesk", "sso"]
include = [
    "LICENSE",
]
packages = [
    {include = "freshdesk_sso"}
]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
